[package]
name = "topiks"
version = "0.1.0-alpha+001"
authors = ["Sean Policarpio <sean@policarp.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kdrakon/topiks"
keywords = ["cli", "kafka"]

[dependencies]
byteorder = "1.2.1"
termion = "1.5.1"
clap = "2.31.2"
native-tls = "0.2.2"

[dev-dependencies]
proptest = "0.8.7"

