[package]
name = "topiks"
version = "0.1.0-alpha+002"
authors = ["Sean Policarpio <sean@policarp.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kdrakon/topiks"
keywords = ["cli", "kafka"]

[profile.release]
lto = true
panic = 'abort'

[dependencies.topiks-kafka-client]
git = "https://github.com/kdrakon/topiks-kafka-client"
tag = "0.1.0-alpha+002"

[dependencies]
termion = "1.5.1"
clap = "2.31.2"
regex = "1.1.2"

[dev-dependencies]
proptest = "0.8.7"

